# ComfyUI-LivePortraitKJ-MPS

./: .gitignore  nodes.py  pyproject.toml  readme.md
liveportrait/: live_portrait_wrapper.py
liveportrait/modules/: dense_motion.py
liveportrait/utils/: helper.py
