[project]
name = "comfyui-liveportraitkj-mps"
description = "If you wish to incorporate these changes into your repo, feel free to open an issue and ask. The commits should be pretty clear, and I also label almost all changes with #HACK so a full text search will work too.\nPlease let me know if you decide to incorporate any of these changes into your LivePortrait implementation so I can direct people to you repository. I do not intend to maintain this repo.\nSome operations are simply not supported on MPS and I didn't rewrite them. Most of my changes are just to .cuda calls and that sort of thing. Many operations are still done on CPU, so don't expect awesome performance."
version = "1.0.0"
license = "LICENSE"
dependencies = ["pyyaml", "numpy", "opencv-python", "rich", "onnxruntime-gpu"]

[project.urls]
Repository = "https://github.com/Grant-CP/ComfyUI-LivePortraitKJ-MPS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-LivePortraitKJ-MPS"
Icon = ""
